--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lol-ranking",
+  "name": "twitch",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "next": "12.0.4",
+    "node-fetch": "^3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
+    "@types/node-fetch": "^3.0.3",
     "@types/react": "17.0.35",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
