Update to TFTACTICS API

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,1 @@
-TFT_API="https://app.mobalytics.gg/api/lol/graphql/v1/query"
-TFT_SET_API="6"
+TFT_API="https://tftactics-matches.kda.gg/matches/match_history"
